# workrule-ai

./: .gitignore  DESIGN.md  README.md
apps/api/: .env.example  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: dependencies.py
apps/api/app/api/routes/: documents.py  health.py  ingestion.py  reviews.py
apps/api/app/core/: config.py
apps/api/app/domain/schemas/: __init__.py  documents.py  ingestion.py  review.py
apps/api/app/services/: draft_document_service.py  hwpx_export_service.py  output_validation_harness.py  prompt_harness.py  review_payload_repair.py  review_preprocessor.py  review_service.py
apps/api/app/services/ingestion/: document_ingestion_service.py  ocr_service.py  text_normalizer.py  vision_ocr_service.py
apps/api/app/services/llm/: __init__.py  base.py  mock_gateway.py  openai_gateway.py  upstage_gateway.py
apps/api/tests/: test_app.py  test_documents_route.py  test_draft_document_service.py  test_ingestion_service.py  test_mock_gateway.py  test_output_validation_harness.py  test_review_payload_repair.py  test_review_preprocessor.py  test_reviews_route.py
docs/: 2026-04-06_ai-lawyer-video-analysis.md  step-1-scaffolding.md
evaluation/: 2026-04-06_redesign_review.md  2026-04-06_vercel_deploy_report.json  dryrun-24-25-26-quality-20260402.json  dryrun-24-25-26-quality-20260402.md  extraction-regression-20260402.json  hybrid-live-22-vs-26-final-20260402.json  hybrid-live-24-25-26-20260402.md  hybrid-live-24-vs-26-final-20260402.json  hybrid-live-25-vs-26-detailed-20260402.json  hybrid-live-25-vs-26-final-20260402.json  ocr-ingestion-check-20260402.json  report.json  upstage-ocr-check-20260402.json  (+5 more)
(+17 files in other folders)
