[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workrule-ai-api"
version = "0.1.0"
description = "FastAPI backend for structured employment rules review"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "openai>=1.107.0,<2.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "pypdf>=6.0.0,<7.0.0",
  "python-docx>=1.2.0,<2.0.0",
  "olefile>=0.47,<1.0.0",
  "pymupdf>=1.27.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.4.0,<9.0.0",
  "pytest-asyncio>=1.1.0,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
